<resources>
    <string name="app_name">DocBook</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="documents">Documents</string>
    <string name="credentials">Credentials</string>
    <string name="notes">Notes</string>
    <string name="Links">Links</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="filename">file name</string>
    <string name="link">link</string>
    <string name="add_notes">Add Notes</string>
    <string name="text_reminder">Reminder</string>
    <string name="title_schedules">Schedules</string>
    <string name="text_search">Search</string>
    <string name="userid_mail">User Id / Email</string>
    <string name="password">Password</string>
    <string name="links">links</string>
    <string name="date">date</string>

    <string-array name="document_type">
        <item>Document Type</item>
        <item>Image</item>
        <item>Doc/PDF</item>
    </string-array>

</resources>