<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Name   : DocBook
  ~ Created By  	  : imac
  ~ Email  	       :  faisal.hossain.pk@gmail.com
  ~ Created Date	  : 1/19/21 11:57 PM
  ~ Last edited by :  imac
  ~ Edited time    : 1/19/21 11:57 PM
  ~ Purpose        :
  ~ (c) resilientbd.
  ~  ======================
  -->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/general_content_spacing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:inputType="textPersonName"
                    android:hint="@string/title" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:inputType="textPersonName"
                    android:hint="@string/description" />

                <Spinner
                    android:id="@+id/spinner_select"
                    android:entries="@array/document_type"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/select_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"

                        android:visibility="visible"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu_camera" />

                    <TextView
                        android:id="@+id/docname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/filename" />

                    <Button
                        android:id="@+id/btn_add_doc"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="+" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="done" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>