<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/general_content_spacing"
        tools:context=".ui.home.HomeFragment">

        <View
            android:id="@+id/scale_view"
            android:layout_width="@dimen/general_content_spacing"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/scale_view2"
            android:layout_width="0dp"
            android:layout_height="@dimen/general_content_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/scale_view2"
            app:layout_constraintRight_toLeftOf="@id/scale_view">

            <LinearLayout
                android:id="@+id/doc_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_doc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_doc"
                   />

                <TextView
                    android:id="@+id/text_doc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/documents" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/scale_view2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scale_view">

            <LinearLayout
                android:id="@+id/credentials_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_credentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_credentials" />

                <TextView
                    android:id="@+id/text_credentials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/credentials" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scale_view"
            app:layout_constraintTop_toBottomOf="@+id/scale_view2">

            <LinearLayout
                android:id="@+id/notes_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_notes"
                    tools:layout_editor_absoluteX="104dp" />

                <TextView
                    android:id="@+id/text_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/notes" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/scale_view"
            app:layout_constraintTop_toBottomOf="@+id/scale_view2">

            <LinearLayout
                android:id="@+id/links_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_links" />

                <TextView
                    android:id="@+id/text_links"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Links" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>