<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Name   : DocBook
  ~ Created By  	  : imac
  ~ Email  	       :  faisal.hossain.pk@gmail.com
  ~ Created Date	  : 1/19/21 11:58 PM
  ~ Last edited by :  imac
  ~ Edited time    : 1/19/21 11:58 PM
  ~ Purpose        :
  ~ (c) resilientbd.
  ~  ======================
  -->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_white_add_notes"
            android:layout_marginRight="16dp" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginLeft="@dimen/text_margin_32"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_12"
                    android:layout_marginEnd="@dimen/text_margin_32"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/paddin_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_title">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/edit_text_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:hint="@string/title"
                            android:inputType="text"
                            android:padding="@dimen/paddin_16"
                            android:paddingStart="@dimen/paddin_16"
                            android:paddingEnd="@dimen/paddin_16" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginLeft="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_32"
                    android:text="@string/description"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_title" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_12"
                    android:layout_marginEnd="@dimen/text_margin_32"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/paddin_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_description">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_text_description"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/height_200"
                            android:autofillHints="@string/text_search"
                            android:background="@color/white"
                            android:gravity="start"
                            android:hint="@string/description"
                            android:inputType="textMultiLine"
                            android:padding="@dimen/paddin_8"
                            android:paddingStart="@dimen/paddin_16"
                            android:paddingEnd="@dimen/paddin_16"
                            android:textAlignment="textStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/image_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/text_date"
                    app:layout_constraintStart_toStartOf="@+id/card_view_description"
                    app:layout_constraintTop_toTopOf="@+id/text_date"
                    app:srcCompat="@drawable/ic_black_schedule" />

                <ImageView
                    android:id="@+id/image_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/text_time"
                    app:layout_constraintStart_toStartOf="@+id/card_view_description"
                    app:layout_constraintTop_toTopOf="@+id/text_time"
                    app:srcCompat="@drawable/ic_reminder" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_16"
                    android:layout_marginLeft="@dimen/text_margin_16"
                    android:layout_marginTop="@dimen/text_margin_32"
                    app:layout_constraintStart_toEndOf="@+id/image_view_date"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_description" />

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_16"
                    android:layout_marginLeft="@dimen/text_margin_16"
                    android:layout_marginTop="@dimen/text_margin_32"
                    app:layout_constraintStart_toEndOf="@+id/image_view_time"
                    app:layout_constraintTop_toBottomOf="@+id/text_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>